--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
+		"cohere-ai": "^7.2.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-markdown": "^9.0.0"
 	}
 }
